name:                random-bag
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Bag
  -- other-modules:       
  other-extensions:    LambdaCase,
    DeriveGeneric,
    GeneralizedNewtypeDeriving,
    DeriveDataTypeable
  build-depends:
    base >=4.7 && <4.8,
    vector >=0.10 && <0.11,
    vector-binary-instances >=0.2 && <0.3,
    pref >=0.1 && <0.2,
    primitive >=0.5 && <0.6,
    pcg-random >= 0.1.0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
